trunk/Archive2/30/630e790ad650a2/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:11:105: error: parameter declared 'auto'
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                                         ^
main.cpp: In lambda function:
main.cpp:12:16: error: 'elem' was not declared in this scope
         return elem[0] == album;
                ^
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h: In instantiation of '_ForwardIterator std::__stable_partition_adaptive(_ForwardIterator, _ForwardIterator, _Predicate, _Distance, _Pointer, _Distance) [with _ForwardIterator = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; _Pointer = std::basic_string<char>*; _Predicate = main()::__lambda0; _Distance = long int]':
/usr/include/c++/4.8/bits/stl_algo.h:1942:35:   required from '_BIter std::stable_partition(_BIter, _BIter, _Predicate) [with _BIter = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; _Predicate = main()::__lambda0]'
main.cpp:13:6:   required from here
/usr/include/c++/4.8/bits/stl_algo.h:1858:25: error: no match for call to '(main()::__lambda0) (std::basic_string<char>&)'
      if (__pred(*__first))
                         ^
main.cpp:11:91: note: candidate is:
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                           ^
main.cpp:11:109: note: main()::__lambda0
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                                             ^
main.cpp:11:109: note:   candidate expects 0 arguments, 1 provided
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h: In instantiation of '_RandomAccessIterator std::__find_if_not(_RandomAccessIterator, _RandomAccessIterator, _Predicate, std::random_access_iterator_tag) [with _RandomAccessIterator = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; _Predicate = main()::__lambda0]':
/usr/include/c++/4.8/bits/stl_algo.h:311:38:   required from '_InputIterator std::__find_if_not(_InputIterator, _InputIterator, _Predicate) [with _InputIterator = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; _Predicate = main()::__lambda0]'
/usr/include/c++/4.8/bits/stl_algo.h:1924:59:   required from '_BIter std::stable_partition(_BIter, _BIter, _Predicate) [with _BIter = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; _Predicate = main()::__lambda0]'
main.cpp:13:6:   required from here
/usr/include/c++/4.8/bits/stl_algo.h:267:29: error: no match for call to '(main()::__lambda0) (std::basic_string<char>&)'
    if (!bool(__pred(*__first)))
                             ^
main.cpp:11:91: note: candidate is:
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                           ^
main.cpp:11:109: note: main()::__lambda0
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                                             ^
main.cpp:11:109: note:   candidate expects 0 arguments, 1 provided
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:271:29: error: no match for call to '(main()::__lambda0) (std::basic_string<char>&)'
    if (!bool(__pred(*__first)))
                             ^
main.cpp:11:91: note: candidate is:
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                           ^
main.cpp:11:109: note: main()::__lambda0
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                                             ^
main.cpp:11:109: note:   candidate expects 0 arguments, 1 provided
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:275:29: error: no match for call to '(main()::__lambda0) (std::basic_string<char>&)'
    if (!bool(__pred(*__first)))
                             ^
main.cpp:11:91: note: candidate is:
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                           ^
main.cpp:11:109: note: main()::__lambda0
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                                             ^
main.cpp:11:109: note:   candidate expects 0 arguments, 1 provided
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:279:29: error: no match for call to '(main()::__lambda0) (std::basic_string<char>&)'
    if (!bool(__pred(*__first)))
                             ^
main.cpp:11:91: note: candidate is:
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                           ^
main.cpp:11:109: note: main()::__lambda0
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                                             ^
main.cpp:11:109: note:   candidate expects 0 arguments, 1 provided
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:287:29: error: no match for call to '(main()::__lambda0) (std::basic_string<char>&)'
    if (!bool(__pred(*__first)))
                             ^
main.cpp:11:91: note: candidate is:
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                           ^
main.cpp:11:109: note: main()::__lambda0
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                                             ^
main.cpp:11:109: note:   candidate expects 0 arguments, 1 provided
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:291:29: error: no match for call to '(main()::__lambda0) (std::basic_string<char>&)'
    if (!bool(__pred(*__first)))
                             ^
main.cpp:11:91: note: candidate is:
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                           ^
main.cpp:11:109: note: main()::__lambda0
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                                             ^
main.cpp:11:109: note:   candidate expects 0 arguments, 1 provided
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:295:29: error: no match for call to '(main()::__lambda0) (std::basic_string<char>&)'
    if (!bool(__pred(*__first)))
                             ^
main.cpp:11:91: note: candidate is:
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                           ^
main.cpp:11:109: note: main()::__lambda0
     std::stable_partition(std::begin(badDatastructure), std::end(badDatastructure), [album](const auto& elem) {
                                                                                                             ^
main.cpp:11:109: note:   candidate expects 0 arguments, 1 provided
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h: At global scope:
/usr/include/c++/4.8/bits/stl_algo.h:319:5: error: '_InputIterator std::__find_if_not_n(_InputIterator, _Distance&, _Predicate) [with _InputIterator = __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >; _Predicate = main()::__lambda0; _Distance = long int]', declared using local type 'main()::__lambda0', is used but never defined [-fpermissive]
     __find_if_not_n(_InputIterator __first, _Distance& __len, _Predicate __pred)
     ^
